# Sackigami

./: .gitignore  README.md  gendocs  index.html  pyproject.toml  pytest.ini  requirements.txt  sackigami.html  search.js
sackigami/: __init__.py  bot.html  bot.py  cli.html  cli.py  constants.html  constants.py  fetch.html  fetch.py  main.py  schedules.html  teams.html  teams.py  x.html  x.py
tests/: test_bot.py  test_fetch.py  test_teams.py
